# facet

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  download.rs  main.rs  manifest.rs  paths.rs  ui.rs  version.rs
src/commands/: add.rs  console.rs  init.rs  install.rs  lint.rs  mod.rs  new.rs  passthrough.rs  remove.rs  run.rs  sapphire.rs  self_cmd.rs  test.rs
