[package]
name = "facet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
